--- a/Five_Chess/makefile
+++ b/Five_Chess/makefile
@@ -1,2 +1,2 @@
 all:
-	gcc mice.c main.c kkkk.o road.o cursor.o cursor_16_25.o  basic_shape.c  print-board.c common.h -lm
+	gcc mice.c main.c kkkk.o road.o cursor.o cursor_16_25.o  basic_shape.c  print-board.c chessboard.o common.h -lm
