--- a/Five_Chess_Network/makefile
+++ b/Five_Chess_Network/makefile
@@ -1,2 +1,2 @@
 all:
-	gcc mice.c server.c main.c road.o cursor_16_25.o  basic_shape.c  print-board.c chessboard.o common.h -lm -lpthread
+	gcc mice.c server.c main.c road.o cursor_16_25.o  basic_shape.c  print-board.c chessboard.o -lm -lpthread -Wall
