--- a/Five_Chess_Network/makefile
+++ b/Five_Chess_Network/makefile
@@ -1,2 +1,2 @@
 all:
-	gcc common.h mice.c server.c main.c cursor_16_25.o  basic_shape.c  print-board.c chessboard.o -lm -lpthread -Wall
+	gcc common.h mice.c server.c client.c main.c cursor_16_25.o  basic_shape.c  print-board.c chessboard.o -lm -lpthread -Wall
